# Parallel_Total_Variation

./: ReadMe  ReadMe.md
ver_cuda/: build.sh  run.sh
ver_cuda/src/: CU_tool.cu  ROF_tv.cu  ROF_tv_VIDEO.cu  ROFtv.cuh
ver_openmp/: build.sh
ver_openmp/src/: tags
ver_openmp/src/ROFtv/: ROFtv.cpp  finiteDifference.hpp
ver_openmp/src/app/: ROF_tv.cpp  ROF_tv_Image.cpp
ver_serial/: build.sh  run.sh
ver_serial/src/: CMakeLists.txt
ver_serial/src/ROFtv/: ROFtv.cpp
ver_serial/src/app/: ROF_tv.cpp
ver_thread/: run.sh
ver_thread/src/: CMakeLists.txt
ver_thread/src/ROFtv/: ROFtv.cpp  finiteDifference.hpp
ver_thread/src/app/: CMakeLists.txt  ROF_tv.cpp  ROF_tv_old.cpp
ver_thread_openmp/: run.sh
ver_thread_openmp/src/: CMakeLists.txt
ver_thread_openmp/src/ROFtv/: CMakeLists.txt  ROFtv.cpp  finiteDifference.hpp
ver_thread_openmp/src/app/: ROF_tv.cpp
